# PFD_Agent

./: .env  .gitattributes  .gitignore  CHANGELOG.md  README.md  VASP_README.md  agent_template.py  pyproject.toml
agents/: run_agent.sh
agents/MatCreator/: __init__.py  agent.py  assessment_agent.py  callbacks.py  constants.py  execution_agent.py  input.json  planning_agent.py  util_agent.py  workspace.py
agents/MatCreator/abacus_agent/: agent.py
agents/MatCreator/agents/: subagent.yaml
agents/MatCreator/database_agent/: agent.py
agents/MatCreator/dpa_agent/: agent.py
agents/MatCreator/execution_agent/: agent.py
agents/MatCreator/guides/: materials_design.md
agents/MatCreator/knowledge/: __init__.py  review.py
agents/MatCreator/orchestrator/: agent.py
agents/MatCreator/pfd_agent/: agent.py
agents/MatCreator/plot_agent/: agent.py
agents/MatCreator/prompts/: __init__.py  subagents.py  workflow.py
agents/MatCreator/structure_agent/: agent.py
agents/MatCreator/tester_agent/: agent.py
agents/MatCreator/thinking_agent/: agent.py  memory.py  skill.py  workspace_tools.py
agents/MatCreator/tools/: workspace_tools.py
agents/MatCreator/vasp_agent/: agent.py
examples/pfd_finetune_vasp/: README.md
pfd_agent/train/: dp.py
script/: database.sh  init_mcp.sh  start_agent.py  start_mcp_servers.py
server/database_server/: server.py
server/ft_server/: pyproject.toml  server.py
src/: start_agent.sh  websocket-server.py
src/config/: README.md  agent-config.json  agent_config.py
src/matcreator/mcp/: database.py  pfd.py
src/matcreator/modules/: train.py  utils.py
src/matcreator/script/: database_agent.py  pfd_agent.py
src/matcreator/scripts/: start_agent.py  start_matcreator.sh
src/matcreator/tools/abacus/: pyproject.toml  server.py
src/matcreator/tools/abacus/src/abacus/: abacus.py  utils.py
src/pfd_agent/: agent.py  prompt.py
src/ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/ui/src/: main.tsx
tests/: test_kdg_explicit_migration.py
tools/abacus/: README.md  mcp-config.json  pyproject.toml  server.py
tools/database/: mcp-config.json  pyproject.toml  server.py
tools/database/database/: __init__.py  database.py
tools/dpa/: README.md  __init__.py  pyproject.toml  server.py
tools/dpa/dpa/: train.py
tools/dpa/src/dpa_tool/: ase_md.py  train.py  utils.py
tools/dpa/tools/: ase_md.py
tools/quest/: mcp-config.json  pyproject.toml  server.py
tools/quest/quest_tool/: quest.py
tools/quest/src/structure_builder/: __init__.py  quest.py  structure_builder.py  utils.py
tools/vasp/: README.md  config.yaml  server.py
web/: main.py  streamlit_app.py
web/vite-frontend/: index.html
(+96 files in other folders)
