[project]
name = "quest-server"
version = "0.0.1"
description = "Quest for entropy-based structure filtering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.26.0",
    "bohr-agent-sdk>=0.1.101",
    "bohrium-sdk>=0.13.0",
    "quests"
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"