[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quest-server"
version = "0.0.1"
description = "Quest for entropy-based structure filtering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase",
    "bohr-agent-sdk>=0.1.101",
    "numba==0.63.1",
    "numpy",
    "quests",
]
